--- a/modules/documentation/modules.html
+++ b/modules/documentation/modules.html
@@ -1,4 +1,4 @@
-<div id="2" class="twelve columns"><h5>modules</h5><div><p>By Default the index.php is already created for you, to create new pages simple right the title of the page you want to create and click submit. To overwrite the module with new content just select the same page, click submit and the content will be replaced.</p>
+<div id="2" class="skeleton-module twelve columns"><h5>modules</h5><div><p>By Default the index.php is already created for you, to create new pages simple right the title of the page you want to create and click submit. To overwrite the module with new content just select the same page, click submit and the content will be replaced.</p>
 
 <p>To create new modules select the page you want the module to display on. If you want to display the module on several pages, just reselect the page and click submit again.</p>
 
