--- a/modules/index/this-is-the-home-page.html
+++ b/modules/index/this-is-the-home-page.html
@@ -1,1 +1,1 @@
-<div id="1" class="twelve columns"><h5 class="module_title">this is the home page</h5><div>Login to your admin to start making changes.</div></div>
+<div id="1" class="skeleton-module twelve columns"><h5 class="module_title">this is the home page</h5><div>Login to your admin to start making changes.</div></div>
