fixed; on load nav margin-left

--- a/modules/index/this-is-the-home-page.html
+++ b/modules/index/this-is-the-home-page.html
@@ -1,1 +1,6 @@
-<div id="1" class="skeleton-module twelve columns"><h5 class="module_title">this is the home page</h5><div>Login to your admin to start making changes.</div></div>
+<div id="1" class="skeleton-module twelve columns">
+<h5 class="module_title">this is the home page</h5>
+	<div>
+		<p>You can begin administering your skeleton cms site by logging in <a href="../login.php">here</a> 
+	</div>
+</div>
