--- a/modules/index/this-is-the-home-page.html
+++ b/modules/index/this-is-the-home-page.html
@@ -1,6 +1,9 @@
 <div id="1" class="skeleton-module twelve columns">
-<h5 class="module_title">this is the home page</h5>
+<h5 class="module_title">skeleton cms</h5>
 	<div>
+		<p>Skeleton CMS is a flat file cms meaning that there is not database. Skeleton uses PHP write file ability to create content and functionality. In most cms systems your content is submitted to a database and then when needed is called upon for display, instead skeleton writes a series of HTML files that are created on the fly in the admin section.  These HTML files can either be updated by overriding them from the admin section or going directly to them on your server.</p>
+
+		<p>Content is created via modules that are loaded into grid positions laid out by <a href="http://getskeleton.com/">Skeleton CSS Framework</a>. Icons from <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> are preloaded as a plugin for use. You can learn more about either by clicking the links provided.</p>    
 		<p>You can begin administering your skeleton cms site by logging in <a href="../login.php">here</a> 
 	</div>
 </div>
